Fix invisibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1877,12 +1877,9 @@
 
 	.flex {
 		display: -ms-flexbox;
-		opacity: 0;
+		opacity: 1;
 		-ms-flex-wrap: wrap;
 		-ms-flex-pack: justify;
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
 		display: flex;
 		-moz-flex-wrap: wrap;
 		-webkit-flex-wrap: wrap;
@@ -1892,11 +1889,6 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		-webkit-animation-delay: 2s;
-		-moz-animation-delay: 2s;
-		-ms-animation-delay: 2s;
-		-o-animation-delay: 2s;
-		animation-delay: 2s;
 	}
 
 		.flex.flex-2 article {
@@ -3066,68 +3058,3 @@
 		}
 
 	}
-	
-/* Loading animations */
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-@keyframes displayelem {
-	96%, 100% {
-        opacity:1;
-    }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes displayelem {
-	96%, 100% {
-        opacity:1;
-    }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes displayelem {
-	96%, 100% {
-        opacity:1;
-    }
-}
-
-/* Internet Explorer */
-@-ms-keyframes displayelem {
-	96%, 100% {
-        opacity:1;
-    }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes displayelem {
-	96%, 100% {
-        opacity:1;
-    }
-}
